--- a/tests/public_api_access/AndroidManifest.xml
+++ b/tests/public_api_access/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <uses-library android:name="android.test.runner" />
     </application>
 
+        <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
+    
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <!--
