--- a/tests/permission/AndroidManifest.xml
+++ b/tests/permission/AndroidManifest.xml
@@ -13,27 +13,32 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- -->
+-->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.providers.downloads.permission.tests">
+    package="com.android.providers.downloads.permission.tests" >
 
     <application>
         <uses-library android:name="android.test.runner" />
     </application>
 
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
     <!--
     The tests in this package are intended to verify that protected APIs or data
     cannot be accessed without the necessary permissions. Thus this manifest should not
     include any uses-permissions tags
     -->
 
+
     <!--
     The test declared in this instrumentation can be run via this command
     "adb shell am instrument -w com.android.providers.downloads.permission.tests/android.test.InstrumentationTestRunner"
     -->
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
-                     android:targetPackage="com.android.providers.downloads.permission.tests"
-                     android:label="Tests for Download provider permissions"/>
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Tests for Download provider permissions"
+        android:targetPackage="com.android.providers.downloads.permission.tests" />
 
 </manifest>
