--- a/tests/permission/project.properties
+++ b/tests/permission/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-2
+target=android-19
+android.library.reference.1=../..
